fix: docs and optimize parameter from favorites route (client/admin)
